<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/egg_Run_Title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:contentDescription="@string/Title"
            app:srcCompat="@drawable/egg_run_title"
            />


        <Button
            android:id="@+id/hatchButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@drawable/eggmenu1"
            android:text="@string/hatch_new_egg_button"
            android:textColor="#000000"
            app:backgroundTint="@drawable/change_button_color"
            app:backgroundTintMode="multiply" />

        <Button
            android:id="@+id/currentButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@drawable/eggmenu2"
            android:text="@string/current_egg_button"
            android:textColor="#000000"
            app:backgroundTint="@drawable/change_button_color"
            app:backgroundTintMode="multiply" />

        <Button
            android:id="@+id/petsButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@drawable/eggmenu3"
            android:text="@string/pets_button"
            android:textColor="#000000"
            app:backgroundTint="@drawable/change_button_color"
            app:backgroundTintMode="multiply" />

        <Button
            android:id="@+id/optionsButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@drawable/eggmenu4"
            android:text="@string/options_button"
            android:textColor="#000000"
            app:backgroundTint="@drawable/change_button_color"
            app:backgroundTintMode="multiply" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>