<resources>
    <string name="app_name">EggRun</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hatch_new_egg_button">Hatch New Egg</string>
    <string name="current_egg_button">Current Eggs</string>
    <string name="pets_button">Pets</string>
    <string name="options_button">Options</string>
    <string name="Title">Title</string>
    <string name="title_activity_new_account">MainActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="account_title">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="createAccount">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="common_button">Common Egg\n1 Mile</string>
    <string name="uncommon_button">Uncommon Egg\n3 Miles</string>
    <string name="rare_button">Rare Egg\n5 Miles</string>
    <string name="legendary_button">Legendary Egg\n10 Miles</string>
    <string name="no_eggs">No Eggs</string>
    <string name="legendary_egg">Legendary Egg</string>
    <string name="rare_egg">Rare Egg</string>
    <string name="uncommon_egg">Uncommon Egg</string>
    <string name="common_egg">Common Egg</string>
    <string name="num_eggs">Number of Eggs</string>
    <string name="changeAccount">Change Account</string>
    <string name="createNewAccount">Create New Account</string>
    <string name="switchAccount">Switch Account</string>
    <string name="login">Login</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="incubate">Incubate</string>
    <string name="hatch">Hatch</string>
    <string name="hatch_egg">hatch_egg</string>
    <string name="your_egg_hatched">Your egg hatched!!</string>
    <string name="view">View</string>
    <string name="no_pets">No Pets</string>
    <string name="petImage">PetImage</string>
    <string name="default_distance">5 miles</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="end_run">End Run</string>
    <string name="average_speed">Average Speed</string>
    <string name="or">---Or---</string>
    <string name="dark_mode_on">Turn on dark mode</string>
</resources>